--- a/querydsl/build.gradle
+++ b/querydsl/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	//querydsl 추가
 	implementation 'com.querydsl:querydsl-jpa'
+	// 쿼리 파라미터 로그 확인
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
 }
 
 tasks.named('test') {
