--- a/querydsl/src/main/resources/application.yml
+++ b/querydsl/src/main/resources/application.yml
@@ -9,11 +9,12 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
-        #        show_sql: true
+        show_sql: true
         format_sql: true
+        use_sql_comments: true
       logging.level:
         org.hibernate.SQL: debug
-      #  org.hibernate.type: trace
+        org.hibernate.type: trace
 
 server:
   port: 8081
