--- a/querydsl/src/test/resources/application-test.yml
+++ b/querydsl/src/test/resources/application-test.yml
@@ -1,9 +1,8 @@
 server:
   port: 8081
 
----
-
 spring:
+  profiles: test
   datasource:
     url: jdbc:h2:tcp://localhost/~/querydsl
     username: sa
@@ -20,6 +19,3 @@ spring:
       logging.level:
         org.hibernate.SQL: debug
         org.hibernate.type: trace
-  config:
-    activate:
-      on-profile: local
